--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "唐健"
+  name             : "杨浩霄"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "武汉大学/慕尼黑工业大学"
   location         : "德国 巴伐利亚州 慕尼黑"
