--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: "简介"
-    url: "/zh-cn/#about-me"
+  - title: "About me"
+    url: "/#about-me"
 
-  - title: "教育背景"
-    url: "/zh-cn/#-xl"
+  - title: "Education"
+    url: "/#-xl"
 
-  - title: "论文专利"
-    url: "/zh-cn/#-lwzl"
+  - title: "Publication"
+    url: "/#-lwzl"
 
-  - title: "工作实习"
-    url: "/zh-cn/#-gzsx"
+  - title: "Internship"
+    url: "/#-gzsx"
 
-  - title: "项目经历"
-    url: "/zh-cn/#-xmjl"
+  - title: "Projects"
+    url: "/#-xmjl"
 
-  - title: "荣誉奖项"
-    url: "/zh-cn/#-ryjx"
+  - title: "Honors and Awards"
+    url: "/#-ryjx"
