--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Haoxiao Yang"
-description              : "Earth-oriented Space Science and Technology"
+description              : "Navigation and Positioning"
 repository               : "GreatBruceYoung/greatbruceyoung.github.io"
 google_scholar_stats_use_cdn : false
 
