--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Publication"
     url: "/#-lwzl"
 
-  - title: "Internship"
+  - title: "Internship & Work Experience"
     url: "/#-gzsx"
 
   - title: "Projects"
