--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Haoxiao (Henry) Yang"
+title                    : "Haoxiao Yang"
 description              : "M.Sc Student"
 repository               : "GreatBruceYoung/greatbruceyoung.github.io"
 google_scholar_stats_use_cdn : false
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Haoxiao (Henry) Yang"
-  avatar           : "images/photo.jpg"
-  bio              : "Wuhan University & Technical University of Munich"
+  name             : "Haoxiao Yang"
+  avatar           : "images/photo_new.jpg"
+  bio              : "Technical University of Munich"
   location         : "Munich, Germany"
   employer         : #"None"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=bsoUm7sAAAAJ"
-  email            : "yanghaoxiao@whu.edu.cn"
+  email            : "haoxiao.yang@tum.de"
   researchgate     : "https://www.researchgate.net/profile/Haoxiao-Yang"
   uri              : 
   bitbucket        :
@@ -43,7 +43,7 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/haoxiao-yang-646138273/"
+  linkedin         : # "https://www.linkedin.com/in/haoxiao-yang-646138273/"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : "https://orcid.org/0000-0003-1319-1953"
   pinterest        :
