--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "About me"
     url: "/#about-me"
 
+  - title: "News"
+    url: "/#-xw"
+
   - title: "Education"
     url: "/#-xl"
 
