--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Haoxiao Yang"
-description              : "M.Sc Student"
+description              : "M.Sc. in robotic navigation and perception"
 repository               : "GreatBruceYoung/greatbruceyoung.github.io"
 google_scholar_stats_use_cdn : false
 
@@ -28,7 +28,7 @@ author:
   employer         : #"None"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=bsoUm7sAAAAJ"
-  email            : "haoxiao.yang@tum.de"
+  email            : "haoxiao.yang@foxmail.com"
   researchgate     : "https://www.researchgate.net/profile/Haoxiao-Yang"
   uri              : 
   bitbucket        :
