--- a/.github/workflows/google_scholar_crawler.yaml
+++ b/.github/workflows/google_scholar_crawler.yaml
@@ -1,31 +1,49 @@
 name: Get Citation Data
 
 on: 
- page_build: 
- schedule:
-  - cron:  '0 8 * * *'
- workflow_dispatch:
+  schedule:
+    - cron: '0 8 * * *'  # 每天UTC时间8点运行
+  workflow_dispatch:      # 允许手动点击按钮运行
 
+permissions:
+  contents: write         # 必须加这行，否则无法push结果
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Reqs
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.9'
+
+    - name: Install Dependencies
       run: |
-        sudo apt-get install python3-setuptools
-    - name: Run
+        pip install scholarly jsonpickle
+
+    - name: Run Crawler
+      env: 
+        GOOGLE_SCHOLAR_ID: bsoUm7sAAAAJ  # 直接填入你的ID，无需设置Secrets
       run: |
-        cd ./google_scholar_crawler
-        pip3 install -r requirements.txt
+        # 假设你的Python脚本叫 main.py 且在根目录下
         python3 main.py
+
+    - name: Push to Branch
+      run: |
+        # 进入 python 脚本生成的 results 文件夹
         cd ./results
+        
+        # 初始化 git 并提交
         git init
-        git config --local user.name "${GITHUB_ACTOR}"
-        export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
+        git config --local user.name "GitHub Action"
+        git config --local user.email "action@github.com"
+        
+        # 这一步很关键：强制推送到 google-scholar-stats 分支
+        # 这样你的主分支(main)很干净，只有数据在这个特殊分支里
         git add *.json
         git commit -m "Updated Citation Data"
-        git push "${remote_repo}" HEAD:google-scholar-stats --force
-      env: 
-        GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
+        
+        # 使用 GITHUB_TOKEN 推送
+        git push "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" HEAD:google-scholar-stats --force
